--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,7 @@ StyleCopReport.xml
 *.pidb
 *.svclog
 *.scc
+*.zip
 
 # Chutzpah Test files
 _Chutzpah*
@@ -338,3 +339,5 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+
+DiscordGameSDK/
