remove fizzyutils websocket stuff

--- a/DiscordCore/manifest.json
+++ b/DiscordCore/manifest.json
@@ -2,15 +2,14 @@
     "$schema": "https://github.com/nike4613/BSIPA-MetadataFileSchema/master/Schema.json",
     "author": "andruzzzhka",
     "description": "A plugin for Discord integration in Beat Saber",
-    "gameVersion": "1.16.4",
+    "gameVersion": "1.17.2",
     "id": "DiscordCore",
     "name": "DiscordCore",
-    "version": "1.0.7",
+    "version": "1.0.8",
     "dependsOn": {
       "BSIPA": "^4.2.0",
       "DiscordGameSDK": "^2.5.7",
-      "BeatSaberMarkupLanguage": "^1.5.4",
-      "FizzyUtils": "^1.0.1"
+      "BeatSaberMarkupLanguage": "^1.5.5"
     },
     "links": {
       "project-source": "https://github.com/andruzzzhka/DiscordCore"
