tweak(csproj): copy DiscordGameSDK.manifest on build

--- a/DiscordCore/DiscordCore.csproj
+++ b/DiscordCore/DiscordCore.csproj
@@ -100,9 +100,15 @@
   <ItemGroup>
     <EmbeddedResource Include="UI\SettingsViewController.bsml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="DiscordGameSDK.manifest">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy "$(TargetPath)" "$(BeatSaberDir)\Plugins"
-copy "$(AssemblyName).pdb" "$(BeatSaberDir)\Plugins"</PostBuildEvent>
+copy "$(AssemblyName).pdb" "$(BeatSaberDir)\Plugins"
+copy "DiscordGameSDK.manifest" "$(BeatSaberDir)\Plugins"</PostBuildEvent>
   </PropertyGroup>
 </Project>
